File upload and download updates
